--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
+    <form name="ask-question" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="radio" name="panelist" />
+      <textarea name="question"></textarea>
+    </form>
     <noscript>
       <strong>We're sorry but supreme doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
