--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
-    <form name="ask-question" netlify netlify-honeypot="bot-field" hidden>
+    <form name="form" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="name" />
       <input type="radio" name="panelist" />
       <textarea name="question"></textarea>
