--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
-    <!-- <form name="form" netlify netlify-honeypot="bot-field" hidden>
+    <form name="ask-new-question" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="name" />
-      <input type="radio" name="panelist" />
-      <textarea name="question"></textarea>
-    </form> -->
+      <input type="text" name="email" />
+      <input type="text" name="number" />
+      
+      <textarea name="message"></textarea>
+    </form>
     <noscript>
       <strong>We're sorry but supreme doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
