--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,52 @@
   </head>
   <body>
     <form name="ask-new-question" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name_0" />
+      <input type="text" name="height_0" />
+      <input type="text" name="width_0" />
+
+      <input type="text" name="name_1" />
+      <input type="text" name="height_1" />
+      <input type="text" name="width_1" />
+
+      <input type="text" name="name_2" />
+      <input type="text" name="height_2" />
+      <input type="text" name="width_2" />
+
+      <input type="text" name="name_3" />
+      <input type="text" name="height_3" />
+      <input type="text" name="width_3" />
+
+      <input type="text" name="name_4" />
+      <input type="text" name="height_4" />
+      <input type="text" name="width_4" />
+
+      <input type="text" name="name_5" />
+      <input type="text" name="height_5" />
+      <input type="text" name="width_5" />
+
+      <input type="text" name="name_6" />
+      <input type="text" name="height_6" />
+      <input type="text" name="width_6" />
+
+      <input type="text" name="name_7" />
+      <input type="text" name="height_7" />
+      <input type="text" name="width_7" />
+
+      <input type="text" name="name_8" />
+      <input type="text" name="height_8" />
+      <input type="text" name="width_8" />
+
+      <input type="text" name="name_9" />
+      <input type="text" name="height_9" />
+      <input type="text" name="width_9" />
+
+      
       <input type="text" name="name" />
       <input type="text" name="email" />
       <input type="text" name="number" />
+
+
       
       <textarea name="message"></textarea>
     </form>
